replace Кружки with Студии

--- a/app/views/activities/_search_enter_form.html.erb
+++ b/app/views/activities/_search_enter_form.html.erb
@@ -2,7 +2,7 @@
   <%= hidden_field_tag :order_by, 'created_at', id: :order_by %>
   <div class="filter_sorter">
     <div class="filter_wraper">
-      <h1>Детские кружки Москвы</h1>
+      <h1>Детские студии Москвы</h1>
       <div class="cell">
 	<strong>По возрасту</strong>
 	<ul>
