--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -87,7 +87,7 @@
   </div>
 <% end %>
 
-<%= dialog "Кликните на месте, от которого стоит искать кружки",
+<%= dialog "Кликните на месте, от которого стоит искать студии",
            id: :select_coords_dialog do %>
   <div id="activity_map" style="width: 525px; height: 350px"></div>
 <% end %>
