--- a/app/views/activities/educational.html.erb
+++ b/app/views/activities/educational.html.erb
@@ -1,10 +1,10 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Детские кружки
+  Фестиваль Яркие Люди | Детские студии
 <% end %>
 
 <div class="workshop_list">
   <div class="catalog">
-    <h1>Детские кружки Москвы</h1>
+    <h1>Детские студии Москвы</h1>
     <%= render 'search_form' %>
 
     <div class="activities">
