--- a/app/views/activities/entertainment.html.erb
+++ b/app/views/activities/entertainment.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Детские кружки
+  Фестиваль Яркие Люди | Детские студии
 <% end %>
 
 <div class="entertainment_list">
