--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="clear"></div>
       <% if @organization.activities.present? %>
-      <div class="title_block">Все кружки учреждения:</div>
+      <div class="title_block">Все студии учреждения:</div>
       <div class="catalog">
         <% @organization.activities.each do |activity| %>
           <% if activity.published? %>
