--- a/app/views/experts/_site_activity.html.erb
+++ b/app/views/experts/_site_activity.html.erb
@@ -9,7 +9,7 @@
       <li class="active expert_tab" data-for="activities_catalog">
 	<a href="#">
 	  <span class="count"><%= @expert.approvals_count %></span>
-	  Детские кружки
+	  Детские студии
 	</a>
       </li>
 
