--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -20,7 +20,7 @@
 
       <div class="main_content">
         <% pics = ['/assets/samp/adv.jpg', '/assets/samp/R7.jpg', '/assets/samp/baner.jpg', '/assets/samp/school.jpg', '/assets/samp/var002.gif'] %>
-        <% links = ["http://www.krokha.ru", "http://radio7.ru/?utm_source=bright-people&utm_medium=promo&utm_campaign=bright-people", "http://www.bg.ru", "http://schools.mn.ru/schools/", "www.mama-tv.ru"] %>
+        <% links = ["http://www.krokha.ru", "http://radio7.ru/?utm_source=bright-people&utm_medium=promo&utm_campaign=bright-people", "http://www.bg.ru", "http://schools.mn.ru/schools/", "http://www.mama-tv.ru"] %>
         <% j = rand(0..4) %>
         <div class="adv"><%= link_to image_tag(pics[j]), links[j], "target"=>"_blank" %></div>
         <div class="content-wrapper">
