--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -1,6 +1,6 @@
-<% include_js :after_head, 'youTubeEmbed-jquery-1.0', 'jquery.swfobject.1-1-1.min' %>
+<% include_js :after_head, 'home-video/youTubeEmbed-jquery-1.0', 'home-video/jquery.swfobject.1-1-1.min' %>
 <% content_for :after_head do %>
-  <%= stylesheet_link_tag 'youTubeEmbed-jquery-1.0' %>
+  <%= stylesheet_link_tag 'home-video/youTubeEmbed-jquery-1.0' %>
 <% end %>
 
 <div id="home_video">
