--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -5,6 +5,7 @@
 
 <div id="home_video">
   <%= image_tag '/assets/video-bg.png', :id => 'home_video_inner' %>
+  <div class="mask"></div>
 </div>
 
 <div class="wrapper">
