--- a/app/views/dashboard/photos/index.html.erb
+++ b/app/views/dashboard/photos/index.html.erb
@@ -16,15 +16,15 @@
       </span>
       <button type="submit" class="btn btn-primary start">
 	<i class="icon-upload icon-white"></i>
-	<span>Start upload</span>
+	<span>Начать загрузку</span>
       </button>
       <button type="reset" class="btn btn-warning cancel">
 	<i class="icon-ban-circle icon-white"></i>
-	<span>Cancel upload</span>
+	<span>Отменить загрузку</span>
       </button>
       <button type="button" class="btn btn-danger delete">
 	<i class="icon-trash icon-white"></i>
-	<span>Delete</span>
+	<span>Удалить выбранное</span>
       </button>
       <input type="checkbox" class="toggle">
     </div>
