--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -32,7 +32,7 @@
                 <%= link_to contest.name, contest %>
               </div>
               <div class="date">
-                Конкурс проводится с <%= Russian::strftime(contest.started_at, "%e %B") %> по <%= Russian::strftime(contest.ended_at, "%e %B %Y г.")%>
+                Время проведения с <%= Russian::strftime(contest.started_at, "%e %B") %> по <%= Russian::strftime(contest.ended_at, "%e %B %Y г.")%>
               </div>
               <div class="desc">
                 <%= contest.description %><span class="fade"></span>
