Home video IE8 fix

--- a/app/assets/stylesheets/home-video/youTubeEmbed-jquery-1.0.css
+++ b/app/assets/stylesheets/home-video/youTubeEmbed-jquery-1.0.css
@@ -8,13 +8,12 @@
 	margin: 0 auto;
 }
 
-.flashContainer object { opacity: 0; }
-
 .controlDiv{
 	/* Centering the control div */
 	position:absolute;
 	width:148px;
 	height:148px;
+	z-index: 3;
 	cursor:pointer;
 	top:50%;
 	left:50%;
