--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -184,6 +184,27 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 #home_video_inner { position: absolute; width: 100%; }
 #home_video .mask { position: absolute; z-index: 1; top: 0; width: 100%; height: 100%; }
 
+#home_video_ios
+{
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+    min-width: 960px;
+    max-width: 1235px;
+    height: 360px;
+    background: #7d1425;
+    background: -moz-linear-gradient(-45deg,  #7d1425 0%, #ec144e 50%, #7d1425 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#7d1425), color-stop(50%,#ec144e), color-stop(100%,#7d1425));
+    background: -webkit-linear-gradient(-45deg,  #7d1425 0%,#ec144e 50%,#7d1425 100%);
+    background: -o-linear-gradient(-45deg,  #7d1425 0%,#ec144e 50%,#7d1425 100%);
+    background: -ms-linear-gradient(-45deg,  #7d1425 0%,#ec144e 50%,#7d1425 100%);
+    background: linear-gradient(135deg,  #7d1425 0%,#ec144e 50%,#7d1425 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d1425', endColorstr='#7d1425',GradientType=1 );
+}
+#home_video_inner { position: absolute; width: 100%; }
+#home_video_ios .mask { position: absolute; z-index: 1; top: 0; width: 100%; height: 100%; }
+
 .main_content { padding:20px 20px;}
 .main_content .title { font-family:Futura; font-weight:bold; font-size:16px; padding-bottom:10px}
 .main_content .timer { margin-right:670px;  }
