--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -8,12 +8,9 @@
   var isiPhone = navigator.userAgent.match(/iPhone/i) != null;
   var isiPod = navigator.userAgent.match(/iPod/i) != null;
 
-  if(isiPad = true || isiPhone = true || isiPod = true) {
-
-  $("#home_video").hide();
-  $("#home_video_ios").show();
-
-  }
+  if(isiPad == true || isiPhone == true || isiPod == true) {
+    $("#home_video").hide();
+    $("#home_video_ios").show();
   }
 
 </script>
