working hd download

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -12,6 +12,8 @@
 
 <br /><br /><br />
 
+<%= link_to "HD download", "", id: "hd_download" %>
+<br /><br /><br />
 
 
 <% @photos.each do |photo| %>
