--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <div id="home_video">
-  <%= image_tag '/assets/video-bg.png', :id => 'home_video_inner' %>
+  <%= image_tag '/assets/video-bg.jpg', :id => 'home_video_inner' %>
   <div class="mask"></div>
 </div>
 
