--- a/app/views/dashboard/photos/index.html.erb
+++ b/app/views/dashboard/photos/index.html.erb
@@ -123,7 +123,7 @@
 <script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
 <script src="http://blueimp.github.com/JavaScript-Canvas-to-Blob/canvas-to-blob.min.js"></script>
 
-<%= javascript_include_tag 'file-upload/jquery.ui.widget.js',
+<%= javascript_include_tag 'file-upload/jquery.ui.widget',
                            'file-upload/jquery.iframe-transport',
                            'file-upload/jquery.fileupload',
                            'file-upload/jquery.fileupload-fp',
