--- a/app/views/photos/clock.html.erb
+++ b/app/views/photos/clock.html.erb
@@ -1,1 +1,60 @@
-<h1>THIS IS CLOCK PAGE</h1>
+<div id="bri-main">
+
+  <div class="bri-photographer" data-id="1">
+    <img src="/assets/promo/clock/photographers/1.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/1_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="2">
+    <img src="/assets/promo/clock/photographers/2.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/2_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="3">
+    <img src="/assets/promo/clock/photographers/3.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/3_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="4">
+    <img src="/assets/promo/clock/photographers/4.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/4_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="5">
+    <img src="/assets/promo/clock/photographers/5.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/5_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="6">
+    <img src="/assets/promo/clock/photographers/6.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/6_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="7">
+    <img src="/assets/promo/clock/photographers/7.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/7_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="8">
+    <img src="/assets/promo/clock/photographers/8.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/8_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="9">
+    <img src="/assets/promo/clock/photographers/9.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/9_.png" class="bri-photo hidden">
+  </div>
+  <div class="bri-photographer" data-id="10">
+    <img src="/assets/promo/clock/photographers/10.png" class="bri-number">
+    <img src="/assets/promo/clock/photographers/10_.png" class="bri-photo hidden">
+  </div>
+
+  <div id="bri-main-mask">
+    <div id="bri-svg"></div>
+  </div>
+
+  <a href="#" id="bri-photographers-all">Выбрать всех фотографов</a>
+
+  <form action="#" id="bri-form">
+    <input type="hidden" id="bri-form-photographers" name="photographers" value="">
+    <input type="hidden" id="bri-form-hour"   name="hour"   value="">
+    <input type="hidden" id="bri-form-minute" name="minute" value="">
+    Я пришел в
+    <div id="bri-time">
+      <span class="bri-hour">10</span>:<span class="bri-minute">00</span>
+    </div>
+    <button class="bri-nav"><img src="/assets/promo/clock/clock-button.png"></button>
+  </form>
+</div>
