--- a/app/assets/stylesheets/promo/style.css
+++ b/app/assets/stylesheets/promo/style.css
@@ -73,10 +73,10 @@ td { vertical-align: top; }
 @font-face 
 {
   font-family: 'Futura';
-  src: url('../font/12686-webfont.eot');
-  src: url('../font/12686-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../font/12686-webfont.woff') format('woff'),
-       url('../font/12686-webfont.ttf') format('truetype');
+  src: url('/assets/fonts/12686-webfont.eot');
+  src: url('/assets/fonts/12686-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/assets/fonts/12686-webfont.woff') format('woff'),
+       url('/assets/fonts/12686-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 
