activity video and pictures changed

--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -19,7 +19,7 @@
 </script>
 
 <div id="home_video_ios" style="display:none">
-  <div style="margin:auto; width:640px"><iframe width="640" height="360" src="http://www.youtube.com/embed/0akT4U6GtwU" frameborder="0" allowfullscreen></iframe></div>
+  <div style="margin:auto; width:640px"><iframe width="640" height="360" src="http://www.youtube.com/embed/2d_RpbxPPac" frameborder="0" allowfullscreen></iframe></div>
 </div>
 
 
