--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -27,6 +27,11 @@
       %>
       <%= participants_menu links %>
     <% end %>
+    
+    <!-- TODO - replace dummies with file links -->
+    <a href="#scheme_file_dummy" class="pdf_link">Схема</a>
+    <a href="#schedule_file_dummy" class="pdf_link">Расписание выступлений</a>
+
     <div class="participants_map">
       <% if ( @stage && !@stage.content.blank? ) %>
       <div class="text">
