--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -16,12 +16,43 @@
 <br /><br /><br />
 
 
-<% @photos.each do |photo| %>
-  <div class="photo" id=<%= photo.id %> >
-    <%= image_tag photo.photo.url %>
-    <div class="download hidden">
-      <%= link_to "Mark", "", "data-action" => "mark" %>
+<div id="bri-content">
+  <header>
+    <div id="bri-clock">здесь/должны/быть/часы</div>
+    <div id="bri-photographers">
+
+      <% User.junior_photographers.order('position ASC').each do |photographer| %>
+        <div class="bri-photographer" data-id=<%= photographer.id %> >
+	  <img src="/assets/promo/clock/photographers/1__.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number"><%= photographer.position %></span>
+            <span class="bri-name"><%= photographer.first_name %><br><%= photographer.last_name %></span>
+          </div>
+        </div>
+      <% end %>
+
+      <div class="bri-all">
+        <div class="bri-bracket">
+          <a href="#" id="bri-photographers-select-all">Выбрать всех фотографов</a>
+        </div>
+      </div>
+
+    </div>
+
+  </header>
+
+  <div id="bri-photos">
+    <div class="am-container" id="am-container">
+      <% @photos.each do |photo| %>
+        <div class="photo" id=<%= photo.id %> >
+          <%= link_to image_tag(photo.photo.url), '#'  %>
+          <div class="download hidden">
+            <%= link_to "Mark", "", "data-action" => "mark" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-  
-<% end %>
+
+</div>
