--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: Futura;
-    src: url("/assets/Futura.eot") /* EOT file for IE */
+    src: url("/assets/fonts/Futura.eot") /* EOT file for IE */
 }
 @font-face {
     font-family: Futura;
-    src: url("/assets/Futura.ttf") /* TTF file for CSS3 browsers */
+    src: url("/assets/fonts/Futura.ttf") /* TTF file for CSS3 browsers */
 }
 
 .operaRounded { content: '';}
