normal pdf links

--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -28,9 +28,8 @@
       <%= participants_menu links %>
     <% end %>
     
-    <!-- TODO - replace dummies with file links -->
-    <a href="#scheme_file_dummy" class="pdf_link">Схема</a>
-    <a href="#schedule_file_dummy" class="pdf_link">Расписание выступлений</a>
+    <a href="/system/files/scheme.pdf" class="pdf_link">Схема</a>
+    <a href="/system/files/schedule.pdf" class="pdf_link">Расписание выступлений</a>
 
     <div class="participants_map">
       <% if ( @stage && !@stage.content.blank? ) %>
