--- a/app/assets/stylesheets/promo/index.css
+++ b/app/assets/stylesheets/promo/index.css
@@ -1,4 +1,4 @@
-body 
+body.promo
 {  
   color: #fff;
   background-color: #740024; 
@@ -79,20 +79,6 @@ body
       #bri-photo-11.active { bottom: -186%; left: 21%; width: 10%; transition-delay: 4.51s; transform: rotate(-30deg); box-shadow: none; }
       #bri-photo-12.active { bottom: -184%; left: 10%; width: 10%; transition-delay: 4.65s; transform: rotate(135deg); box-shadow: none; }
 
-      #bri-photo-1.bri-arrowed { top: -170%; left: 20.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px -1px 3px #000; }
-      #bri-photo-2.bri-arrowed { top: -160%; left: 25.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px -1px 3px #000; }
-      #bri-photo-3.bri-arrowed { top: -150%; left: 30.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px -1px 3px #000; }
-      #bri-photo-4.bri-arrowed { top: -170%; left: 79.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px -1px 3px #000; }
-      #bri-photo-5.bri-arrowed { top: -160%; left: 74.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px -1px 3px #000; }
-      #bri-photo-6.bri-arrowed { top: -150%; left: 69.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px -1px 3px #000; }
-
-      #bri-photo-7.bri-arrowed  { bottom: -190%; left: 20.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px 1px 3px #000; }
-      #bri-photo-8.bri-arrowed  { bottom: -180%; left: 25.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px 1px 3px #000; }
-      #bri-photo-9.bri-arrowed  { bottom: -170%; left: 30.5%; transition-delay: 1s; transform: rotate(0deg); box-shadow: -2px 1px 3px #000; }
-      #bri-photo-10.bri-arrowed { bottom: -190%; left: 79.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px 1px 3px #000; }
-      #bri-photo-11.bri-arrowed { bottom: -180%; left: 74.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px 1px 3px #000; }
-      #bri-photo-12.bri-arrowed { bottom: -170%; left: 69.0%; transition-delay: 1s; transform: rotate(0deg); box-shadow:  2px 1px 3px #000; }
-
     #bri-letters 
     {
       position: absolute;
@@ -121,19 +107,19 @@ body
       #bri-letters-i2    { left:   82%; }
       #bri-letters-exclm { left:   92%; }
 
-footer 
+footer.promo 
 { 
-  /*display: none; */
+  display: none; 
 }
-  footer,
-  footer .bri-links,
-  footer .bri-links .bri-news 
+  footer.promo,
+  footer.promo .bri-links,
+  footer.promo .bri-links .bri-news 
   {
     border-color: #8b002a; 
   }
 
-  footer .bri-credentials,
-  footer .bri-credentials a
+  footer.promo .bri-credentials,
+  footer.promo .bri-credentials a
   {
     color: #ab6d80; 
   }
