--- a/app/assets/stylesheets/promo/index.css
+++ b/app/assets/stylesheets/promo/index.css
@@ -107,6 +107,26 @@ body.promo
       #bri-letters-i2    { left:   82%; }
       #bri-letters-exclm { left:   92%; }
 
+  #bri-main-preloader 
+  { 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    width: 48px; 
+    height: 48px; 
+    margin: -24px 0 0 -24px; 
+    background: url(/assets/promo/preloader.png) no-repeat; 
+    animation-name: preloader;
+    animation-duration: .7s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+    @keyframes preloader
+    {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(72deg); }
+    }
+
 footer.promo 
 { 
   display: none; 
