--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,58 +1,113 @@
-<h1>Страничка с фоточками, часиками и фотограФФчиками</h1>
-
-<h2>Переключатель</h2>
-
-<%= check_box_tag :choose_photos, "Выбирать фотографии" %>
-
-<h2>Количетсво фоток готовых к загрузке</h2>
-<span id="photo_download_count"></span>
-
-<h3>Очистить список</h3>
-<%= link_to "clear list", "", id: 'clean-storage' %>
-
-<br /><br /><br />
-
-<%= link_to "HD download", "", id: "hd_download" %>
-<br /><br /><br />
-
+<% @body_class="photos" %>
 
 <div id="bri-content">
-  <header>
-    <div id="bri-clock">здесь/должны/быть/часы</div>
-    <div id="bri-photographers">
+    
+    <header>
 
-      <% User.junior_photographers.order('position ASC').each do |photographer| %>
-        <div class="bri-photographer" data-id=<%= photographer.id %> >
-	  <img src="/assets/promo/clock/photographers/1__.jpg" class="bri-photo">
+      <div id="bri-clock"></div>    
+
+      <div id="bri-photographers">
+
+              <div class="bri-photographer" data-id="1">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
           <div class="bri-data">
             <span class="bri-camera"></span>
-            <span class="bri-number"><%= photographer.position %></span>
-            <span class="bri-name"><%= photographer.first_name %><br><%= photographer.last_name %></span>
+            <span class="bri-number">1</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="2">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">2</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="3">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">3</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="4">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">4</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="5">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">5</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="6">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">6</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="7">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">7</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="8">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">8</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="9">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">9</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
+          </div>
+        </div><div class="bri-photographer" data-id="10">
+          <img src="img/photos/photographers/1.jpg" class="bri-photo">
+          <div class="bri-data">
+            <span class="bri-camera"></span>
+            <span class="bri-number">10</span>
+            <span class="bri-name">Михаил<br>Потапов</span>
           </div>
         </div>
-      <% end %>
 
-      <div class="bri-all">
-        <div class="bri-bracket">
+        <div class="bri-all">
+          <div class="bri-bracket"></div>
+          <div class="bri-hd">
+            <a href="#" id="bri-hd-download"></a>
+            <a href="#" id="bri-hd-switch"></a>
+            Сохранить фото в HD
+          </div>
           <a href="#" id="bri-photographers-select-all">Выбрать всех фотографов</a>
         </div>
+
       </div>
 
-    </div>
+    </header>
 
-  </header>
+    <div class="clearfix"></div>
 
-  <div id="bri-photos">
-    <div class="am-container" id="am-container">
-      <% @photos.each do |photo| %>
-        <div class="photo" id=<%= photo.id %> >
-          <%= link_to image_tag(photo.photo.url), '#'  %>
-          <div class="download hidden">
-            <%= link_to "Mark", "", "data-action" => "mark" %>
-          </div>
-        </div>
-      <% end %>
+    <div id="bri-photos">
+      <div class="am-container" id="am-container">
+          <a href="#">
+            <div class="bri-checkbox">
+              <div></div>
+            </div>
+            <img src="/assets/promo/clock/photographers/1.jpg">
+          </a>
+      </div>
+      <div class="clearfix"></div>
+      <div id="bri-preloader"></div>
     </div>
   </div>
 
-</div>
+  <script> $(document).ready(function(){ photos() })</script>
