--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,113 +1,53 @@
 <% @body_class="photos" %>
 
 <div id="bri-content">
-    
-    <header>
 
-      <div id="bri-clock"></div>    
+  <header>
 
-      <div id="bri-photographers">
+    <div id="bri-clock"></div>
 
-              <div class="bri-photographer" data-id="1">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">1</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="2">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">2</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="3">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">3</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="4">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">4</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="5">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">5</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="6">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">6</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="7">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">7</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="8">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">8</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="9">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">9</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div><div class="bri-photographer" data-id="10">
-          <img src="img/photos/photographers/1.jpg" class="bri-photo">
-          <div class="bri-data">
-            <span class="bri-camera"></span>
-            <span class="bri-number">10</span>
-            <span class="bri-name">Михаил<br>Потапов</span>
-          </div>
-        </div>
+    <div id="bri-photographers">
+      <% User.junior_photographers.order('position ASC').each do |photographer| %>
+	<div class="bri-photographer" data-id=<%= photographer.id %> >
+	  <%= image_tag photographer.avatar.url, class: 'bri-photo' %>
+	  <div class="bri-data">
+	    <span class="bri-camera"></span>
+	    <span class="bri-number"><%= photographer.position %></span>
+	    <span class="bri-name"><%= photographer.first_name %><br><%= photographer.last_name %></span>
+	  </div>
+	</div>
+      <% end %>
 
-        <div class="bri-all">
-          <div class="bri-bracket"></div>
-          <div class="bri-hd">
-            <a href="#" id="bri-hd-download"></a>
-            <a href="#" id="bri-hd-switch"></a>
-            Сохранить фото в HD
-          </div>
-          <a href="#" id="bri-photographers-select-all">Выбрать всех фотографов</a>
-        </div>
-
+      <div class="bri-all">
+	<div class="bri-bracket"></div>
+	<div class="bri-hd">
+	  <a href="#" id="bri-hd-download"></a>
+	  <a href="#" id="bri-hd-switch"></a>
+	  Сохранить фото в HD
+	</div>
+	<a href="#" id="bri-photographers-select-all">Выбрать всех фотографов</a>
       </div>
 
-    </header>
-
-    <div class="clearfix"></div>
-
-    <div id="bri-photos">
-      <div class="am-container" id="am-container">
-          <a href="#">
-            <div class="bri-checkbox">
-              <div></div>
-            </div>
-            <img src="/assets/promo/clock/photographers/1.jpg">
-          </a>
-      </div>
-      <div class="clearfix"></div>
-      <div id="bri-preloader"></div>
     </div>
-  </div>
 
-  <script> $(document).ready(function(){ photos() })</script>
+  </header>
+
+  <div class="clearfix"></div>
+
+  <div id="bri-photos">
+    <div class="am-container" id="am-container">
+      <% @photos.each do |photo| %>
+	<a href="#">
+	  <div class="bri-checkbox">
+	    <div></div>
+	  </div>
+	  <%= image_tag(photo.photo.url) %>
+	</a>
+      <% end %>
+    </div>
+    <div class="clearfix"></div>
+    <div id="bri-preloader"></div>
+  </div>
+</div>
+
+<script> $(document).ready(function(){ photos() })</script>
